package org.example.Sistema_Gestion_Transporte_Privado.model;

public enum EstadoPago {
    PENDIENTE, PAGADO, PARCIAL, CANCELADO
}
