package org.example.Sistema_Gestion_Transporte_Privado.model;

public enum MetodoPago {
    EFECTIVO, TARJETA_CREDITO, TARJETA_DEBITO, TRANSFERENCIA, PAYPAL
}
